# compilation

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  enum.h  expression.cpp  expression.hpp  expression_symbols.cpp  expression_symbols.h  expression_symbols.hpp  grammar.y  scanner.l  statement.cpp  statement.hpp  utilityFunctions.cpp  utilityFunctions.hpp
src/test/: CMakeLists.txt  test.c  test3.c  test6.c  test8.c  test9.c
test/: CMakeLists.txt
test/basics/: CMakeLists.txt  test.c  test1.c  test10.c  test11.c  test12.c  test13.c  test14.c  test15.c  test16.c  test2.c  test4.c  test5.c  test7.c  test9.c
test/p5/: CMakeLists.txt  ellipses.c  grid.c  index.html  line.c  mandelbrot.c  rec.c  ronds.c
test/p5/lib/: CMakeLists.txt  p5-wrap.js
